Misc fixes
- Fixed modal being stretched when not needed.
- Fixed Logo vertical align
- Fixed drawer content scroll, and from it being squished due to overridden by bootstrap.

--- a/UI/Web/src/app/cards/card-detail-drawer/card-detail-drawer.component.scss
+++ b/UI/Web/src/app/cards/card-detail-drawer/card-detail-drawer.component.scss
@@ -12,7 +12,7 @@
 
 .tab-content {
   overflow: auto;
-  height: calc(40vh - 63px); // drawer height - offcanvas heading height
+  height: calc(40vh - (46px + 1rem)); // drawer height - offcanvas heading height
 }
 
 .h6 {
