--- a/UI/Web/src/theme/components/_offcanvas.scss
+++ b/UI/Web/src/theme/components/_offcanvas.scss
@@ -8,5 +8,5 @@
 }
 
 .offcanvas-bottom {
-    height: 40vh;
+    height: 40vh !important;
 }
